version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/CDB/ETBlockCommand.rst.txt
.. vale off



:class:`ETBlockCommand`
=======================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.CDB.ETBlockCommand

   Bases: :py:obj:`object`


   
   Represents a ETBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ETBlockCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ElementTypeCount`
            - Gets the element type count.
          * - :py:attr:`~ElementTypes`
            - Gets the element types.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.







Property detail
---------------
.. py:property:: ElementTypeCount
   :type: Optional[int]

   
   Gets the element type count.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementTypes
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandElementType]]

   
   Gets the element types.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]

   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]

   
   Gets the command name.
















   ..
       !! processed by numpydoc !!







.. vale on