version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/ETBlockCommand.rst.txt
.. vale off



:class:`ETBlockCommand`
=======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.ETBlockCommand(iEtBlockCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.IETBlockCommand)

   Bases: :py:obj:`object`


   
   Represents a ETBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ETBlockCommand

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ElementTypeCount`
            - Gets the element type count.
          * - :py:attr:`~ElementTypes`
            - Gets the element types.
          * - :py:attr:`~Format`
            - Gets the format.
          * - :py:attr:`~FullName`
            - FullName property.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~ToCdbCommandString`
            - Gets the command text formatted as a CDB file entry.







Property detail
---------------
.. py:property:: ElementTypeCount
   :type: Optional[int]


   
   Gets the element type count.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementTypes
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandElementType]]


   
   Gets the element types.
















   ..
       !! processed by numpydoc !!

.. py:property:: Format
   :type: Optional[str]


   
   Gets the format.
















   ..
       !! processed by numpydoc !!

.. py:property:: FullName
   :type: Optional[str]


   
   FullName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: ToCdbCommandString
   :type: Optional[Ansys.ACT.Automation.Mechanical.FE.CDB.CdbCommandFormatAndParameter]


   
   Gets the command text formatted as a CDB file entry.
   Gets the command parameters formatted as a string.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on